<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 Ilya Fomichev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
	<string name="app_name" translatable="false">Ackpine</string>
	<string name="default_percentage" translatable="false">0%</string>
	<string name="percentage" translatable="false">%d%%</string>
	<string name="screen_title_install">Install</string>
	<string name="screen_title_uninstall">Uninstall</string>
	<string name="screen_title_settings">Settings</string>
	<string name="cancel">Cancel</string>
	<string name="fab_install">Install</string>
	<string name="uninstall">Uninstall</string>
	<string name="settings_installer_backend">Installer</string>
	<string name="settings_installer_backend_description">Installer backend used for installing and uninstalling apps</string>
	<string name="installer_rootless">Rootless (default)</string>
	<string name="installer_root">Root (requires root access)</string>
	<string name="installer_shizuku">Shizuku (requires Shizuku 11+)</string>
	<string name="shizuku_unsupported_android_version">Shizuku is not supported on this Android version</string>
	<string name="shizuku_not_running">Shizuku is not running</string>
	<string name="shizuku_permission_denied">Shizuku permission denied</string>
	<string name="session_error">Error</string>
	<string name="session_error_with_reason">Error: %s</string>
	<string name="no_install_sessions">No install sessions</string>
	<string name="no_installed_applications">No installed applications</string>
	<string name="error_no_base_apk">No base APK found</string>
	<string name="error_conflicting_base_apk">More than one base APK found</string>
	<string name="error_conflicting_split_name">Conflicting split name: %s</string>
	<string name="error_conflicting_package_name">Conflicting package name. Expected: %1$s, found: %2$s, name: %3$s</string>
	<string name="error_conflicting_version_code">Conflicting version code. Expected: %1$s, found: %2$s, name: %3$s</string>
	<string name="settings_install_best_suited_apks">Install only best-suited APKs</string>
	<string name="settings_install_best_suited_apks_description">For split APKs, only install splits matching the device configuration best. When disabled, all APKs in the split package are installed</string>
</resources>