<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2026 Ilya Fomichev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scrollView_settings"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingHorizontal="@dimen/content_padding_horizontal"
			android:paddingVertical="@dimen/preference_margin_vertical">

			<ImageView
				android:id="@+id/imageView_settings_installer_icon"
				android:layout_width="@dimen/preference_icon_size"
				android:layout_height="@dimen/preference_icon_size"
				android:contentDescription="@null"
				android:src="@drawable/ic_installer"
				app:layout_constraintBottom_toBottomOf="@id/textView_settings_installer_description"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@id/textView_settings_installer_title" />

			<TextView
				android:id="@+id/textView_settings_installer_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/preference_content_margin"
				android:text="@string/settings_installer_backend"
				android:textAppearance="?textAppearanceTitleMedium"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/imageView_settings_installer_icon"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/textView_settings_installer_description"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/preference_description_margin"
				android:text="@string/settings_installer_backend_description"
				android:textAppearance="?textAppearanceBodyMedium"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@id/textView_settings_installer_title"
				app:layout_constraintTop_toBottomOf="@id/textView_settings_installer_title" />

			<LinearLayout
				android:id="@+id/layout_settings_installer_rootless"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/preference_header_margin"
				android:background="?attr/selectableItemBackground"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center_vertical"
				android:minHeight="@dimen/preference_min_height"
				android:orientation="horizontal"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@id/textView_settings_installer_title"
				app:layout_constraintTop_toBottomOf="@id/textView_settings_installer_description">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:paddingVertical="@dimen/preference_padding_vertical"
					android:text="@string/installer_rootless"
					android:textAppearance="?textAppearanceBodyLarge" />

				<RadioButton
					android:id="@+id/radioButton_settings_installer_rootless"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/preference_content_margin"
					android:background="@null"
					android:clickable="false"
					android:focusable="false"
					android:minWidth="0dp"
					android:paddingHorizontal="0dp"
					tools:checked="true" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/layout_settings_installer_root"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:background="?attr/selectableItemBackground"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center_vertical"
				android:minHeight="@dimen/preference_min_height"
				android:orientation="horizontal"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@id/textView_settings_installer_title"
				app:layout_constraintTop_toBottomOf="@id/layout_settings_installer_rootless">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:paddingVertical="@dimen/preference_padding_vertical"
					android:text="@string/installer_root"
					android:textAppearance="?textAppearanceBodyLarge" />

				<RadioButton
					android:id="@+id/radioButton_settings_installer_root"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/preference_content_margin"
					android:background="@null"
					android:clickable="false"
					android:focusable="false"
					android:minWidth="0dp"
					android:paddingHorizontal="0dp" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/layout_settings_installer_shizuku"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:background="?attr/selectableItemBackground"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center_vertical"
				android:minHeight="@dimen/preference_min_height"
				android:orientation="horizontal"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@id/textView_settings_installer_title"
				app:layout_constraintTop_toBottomOf="@id/layout_settings_installer_root">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:paddingVertical="@dimen/preference_padding_vertical"
					android:text="@string/installer_shizuku"
					android:textAppearance="?textAppearanceBodyLarge" />

				<RadioButton
					android:id="@+id/radioButton_settings_installer_shizuku"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/preference_content_margin"
					android:background="@null"
					android:clickable="false"
					android:focusable="false"
					android:minWidth="0dp"
					android:paddingHorizontal="0dp" />

			</LinearLayout>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</LinearLayout>
</androidx.core.widget.NestedScrollView>